# turntable_dbt_mini

./: README.md  dbt_project.yml  package-lock.yml  packages.yml  parse_tests.py  pyproject.toml
models/staging/hubspot/: _hubspot__sources.yml  companies_by_stage.sql
models/staging/hubspot/base/: hubspot__company.sql  hubspot__deal_company.sql  hubspot__deal_stage.sql  hubspot__deals.sql
models/staging/posthog/: _posthog__base_models.yml  _posthog__sources.yml  _posthog_stg_models.yml  posthog__event_cleaned.sql  stg_posthog__events.sql
models/staging/posthog/base/: base_posthog__event.sql
snapshots/: base_posthog__event_snapshot.sql
