[project]
name = "turntable-dbt-mini"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "turntable-justin", email = "122627527+turntable-justin@users.noreply.github.com" },
]
dependencies = [
    "dbt-bigquery~=1.7.0",
]
readme = "README.md"
requires-python = ">= 3.11, < 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]
